// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button component correctly 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--large storybook-button--primary"
    style="background-color: blue;"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`renders secondary Button component correctly 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary"
    style="background-color: gray;"
    type="button"
  >
    Secondary Action
  </button>
</DocumentFragment>
`;

exports[`renders small Button component correctly 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary"
    style="background-color: green;"
    type="button"
  >
    Small Button
  </button>
</DocumentFragment>
`;
